--- a/evals/roles/syndesis/defaults/main.yml
+++ b/evals/roles/syndesis/defaults/main.yml
@@ -4,3 +4,4 @@ syndesis_namespace: "integration"
 syndesis_crd_url: https://raw.githubusercontent.com/syndesisio/syndesis/master/install/operator/deploy/syndesis-crd.yml
 syndesis_operator_url: https://raw.githubusercontent.com/syndesisio/syndesis/master/install/operator/deploy/syndesis-operator.yml
 syndesis_url: https://raw.githubusercontent.com/syndesisio/syndesis/master/install/operator/deploy/syndesis.yml
+syndesis_crd_name: syndesises.syndesis.io
