--- a/evals/roles/syndesis/tasks/main.yml
+++ b/evals/roles/syndesis/tasks/main.yml
@@ -1,8 +1,15 @@
 ---
 # tasks file for syndesis
--
+- name: Check if syndesis custom resource definition exists
+  shell: oc get crd {{ syndesis_crd_name }} -n {{ syndesis_namespace }}
+  register: syndesis_crd_exist
+  failed_when: false
+
   name: Create syndesis custom resource definition
   shell: oc create -f {{ syndesis_crd_url }} --namespace {{ syndesis_namespace }}
+  when:
+  - syndesis_crd_exist.rc != 0
+  - "NotFound" not in syndesis_crd_exist.stderr
 
 -
   name: Deploy syndesis operator
