--- a/evals/roles/syndesis/tasks/main.yml
+++ b/evals/roles/syndesis/tasks/main.yml
@@ -14,20 +14,22 @@
   register: syndesis_operator_deployment_exist
   failed_when: false
 
--
-  name: Deploy syndesis operator
-  shell: oc create -f {{ syndesis_operator_url }} --namespace {{ syndesis_namespace }}
-  when: syndesis_operator_deployment_exist.rc != 0
+- block:
+  -
+    name: Deploy syndesis operator
+    shell: oc create -f {{ syndesis_operator_url }} --namespace {{ syndesis_namespace }}
+    register: syndesis_operator_deployed
 
--
-  name: Verify syndesis operator deployment succeeded
-  shell: sleep 5; oc get pods --namespace {{ syndesis_namespace }}  |  grep  "deploy"
-  register: result
-  until: not result.stdout
-  retries: 50
-  delay: 10
-  failed_when: result.stdout
-  changed_when: False
+  -
+    name: Verify syndesis operator deployment succeeded
+    shell: sleep 5; oc get pods --namespace {{ syndesis_namespace }}  |  grep  "deploy"
+    register: result
+    until: not result.stdout
+    retries: 50
+    delay: 10
+    failed_when: result.stdout
+    changed_when: False
+  when: syndesis_operator_deployment_exist.rc != 0
 
 -
   name: Deploy syndesis
