--- a/evals/roles/syndesis/defaults/main.yml
+++ b/evals/roles/syndesis/defaults/main.yml
@@ -6,3 +6,4 @@ syndesis_operator_url: https://raw.githubusercontent.com/syndesisio/syndesis/mas
 syndesis_url: https://raw.githubusercontent.com/syndesisio/syndesis/master/install/operator/deploy/syndesis.yml
 syndesis_crd_name: syndesises.syndesis.io
 syndesis_dc_name: syndesis-operator
+syndesis_custom_resource_name: syndesises
