integration controller playbook

--- a/evals/roles/syndesis/tasks/main.yml
+++ b/evals/roles/syndesis/tasks/main.yml
@@ -38,7 +38,7 @@
 
 - block:
   -
-    name: Deploy syndesis
+    name: Create syndesis custom resource
     shell: oc create -f {{ syndesis_url }} --namespace {{ syndesis_namespace }}
 
   -
