--- a/evals/inventories/group_vars/all/enmasse.yml
+++ b/evals/inventories/group_vars/all/enmasse.yml
@@ -1,5 +1,5 @@
 ---
-enmasse_namespace: integration
+enmasse_namespace: enmaase
 enmasse_multitenant: True
 enmasse_enable_rbac: True
 enmasse_service_catalog: True
