--- a/evals/playbooks/install-all-integration.yml
+++ b/evals/playbooks/install-all-integration.yml
@@ -3,13 +3,14 @@
   vars:
     integration_namespace: "full-test"
   tasks:
-    -
-      name: Install enmasse
-      include_role:
-        name: enmasse
-      vars:
-        enmasse_namespace: "{{ integration_namespace }}"
-      tags: ['enmasse']
+    # -
+    #   name: Install enmasse
+    #   include_role:
+    #     name: enmasse
+    #   vars:
+    #     enmasse_namespace: "{{ integration_namespace }}"
+    #     namespace: "{{ enmasse_namespace }}"
+    #   tags: ['enmasse']
     - 
       name: Install syndesis-operator
       include_role:
@@ -17,17 +18,18 @@
       vars:
         syndesis_namespace: "{{ integration_namespace }}"
       tags: ['syndesis']
-    -
-      name: Set eval_app_host var
-      set_fact:
-        eval_app_host: "{{ hostvars['EVAL_VARS']['eval_app_host'] }}"
-      when: eval_app_host == ''
+    # -
+    # # Talk to jameel about eval_app_host
+    #   name: Set eval_app_host var
+    #   set_fact:
+    #     eval_app_host: "{{ hostvars['EVAL_VARS']['eval_app_host'] }}"
+    #   when: eval_app_host == ''
     -
       name: Install managed services broker
       include_role:
         name: msbroker
       vars:
-        route_suffix: "{{ eval_app_host }}"
+        # route_suffix: "{{ eval_app_host }}"
         msbroker_namespace: "{{ integration_namespace }}"
       tags: ['msbroker']
     - 
