--- a/evals/playbooks/install-all-integration.yml
+++ b/evals/playbooks/install-all-integration.yml
@@ -19,14 +19,14 @@
   vars:
     target_namespace: "full-test"
   tasks:
-    # -
-    #   name: Install enmasse
-    #   include_role:
-    #     name: enmasse
-    #   vars:
-    #     enmasse_namespace: "{{ target_namespace }}"
-    #     namespace: "{{ enmasse_namespace }}"
-    #   tags: ['enmasse']
+    -
+      name: Install enmasse
+      include_role:
+        name: enmasse
+      vars:
+        enmasse_namespace: "{{ target_namespace }}"
+        namespace: "{{ target_namespace }}"
+      tags: ['enmasse']
     - 
       name: Install syndesis-operator
       include_role:
