--- a/evals/playbooks/install-all-integration.yml
+++ b/evals/playbooks/install-all-integration.yml
@@ -14,6 +14,7 @@
         add_host:
           name: EVAL_VARS
           eval_app_host: "{{ (eval_master_config['content'] | b64decode | from_yaml)['routingConfig']['subdomain'] }}"
+          openshift_master_url: "{{ (eval_master_config['content'] | b64decode | from_yaml)['masterPublicURL'] }}"
       tags: ['bootstrap', 'remote']
 - hosts: localhost
   vars:
@@ -31,7 +32,6 @@
       include_role:
         name: enmasse
       vars:
-        enmasse_namespace: "{{ target_namespace }}"
         namespace: "{{ target_namespace }}"
       tags: ['enmasse']
     - 
