--- a/evals/playbooks/install-all-integration.yml
+++ b/evals/playbooks/install-all-integration.yml
@@ -14,7 +14,6 @@
         add_host:
           name: EVAL_VARS
           eval_app_host: "{{ (eval_master_config['content'] | b64decode | from_yaml)['routingConfig']['subdomain'] }}"
-          openshift_master_url: "{{ (eval_master_config['content'] | b64decode | from_yaml)['masterPublicURL'] }}"
       tags: ['bootstrap', 'remote']
 - hosts: localhost
   vars:
@@ -33,6 +32,11 @@
         name: enmasse
       vars:
         namespace: "{{ target_namespace }}"
+        multitenant: "{{ enmasse_multitenant }}"
+        enable_rbac: "{{ enmasse_enable_rbac }}"
+        service_catalog: "{{ enmasse_service_catalog }}"
+        keycloak_admin_password: "{{ eval_rhsso_admin_password }}"
+        authentication_services: "{{ enmasse_authentication_services }}"
       tags: ['enmasse']
     - 
       name: Install syndesis-operator
