--- a/evals/roles/msbroker/defaults/main.yml
+++ b/evals/roles/msbroker/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 msbroker_namespace: msbroker
-msbroker_image_org: jameelb
+msbroker_image_org: sedroche
 msbroker_rbac_url: https://raw.githubusercontent.com/aerogear/managed-services-broker/master/deploy/rbac.yaml
 msbroker_template_url: https://raw.githubusercontent.com/sedroche/managed-services-broker/url-update/templates/broker.template.yaml
