--- a/roles/backup/tasks/uninstall.yml
+++ b/roles/backup/tasks/uninstall.yml
@@ -1,6 +1,7 @@
 ---
-- name: "Delete {{ backup_namespace }} namespace"
-  shell: "oc delete namespace {{ backup_namespace }} "
-  register: output
-  failed_when: output.stderr != '' and 'not found' not in output.stderr and 'The system is ensuring all content is removed from this namespace.' not in output.stderr
-  changed_when: output.rc == 0 
+- include_role:
+    name: namespace
+    tasks_from: delete
+  vars:
+    names:
+      - "{{ backup_namespace }}"
