--- a/roles/delete-user-namespaces/tasks/main.yml
+++ b/roles/delete-user-namespaces/tasks/main.yml
@@ -4,12 +4,11 @@
   shell: "oc get namespaces -o json | jq -r '{{ delete_user_namespaces.jq_query }}'"
   register: namespaces_output
 -
-  name: Delete namespaces
-  shell: "oc delete namespace {{ item }}"
-  register: output
-  failed_when: output.stderr != '' and 'not found' not in output.stderr and 'The system is ensuring all content is removed from this namespace.' not in output.stderr
-  changed_when: output.rc == 0
-  with_items: "{{ namespaces_output.stdout_lines }}"
+- include_role:
+    name: namespace
+    tasks_from: delete
+  vars:
+    names: "{{ namespaces_output.stdout_lines }}"
 -
   name: Wait for namespaces to be removed
   shell: "oc get namespaces -o json | jq -r '{{ delete_user_namespaces.jq_query }}' | wc -l"
