--- a/roles/apicurito/tasks/main.yml
+++ b/roles/apicurito/tasks/main.yml
@@ -2,15 +2,12 @@
 - name: Create {{ apicurito_namespace }} namespace
   include_role:
     name: namespace
+    tasks_from: create
   vars:
-    namespace: "{{ apicurito_namespace }}"
+    name: "{{ apicurito_namespace }}"
     display_name: "{{ apicurito_display_name }}"
-
-- name: Add labels to namespace
-  shell: oc label --overwrite namespace {{ apicurito_namespace }} {{ monitoring_label_name }}={{ monitoring_label_value }} integreatly-middleware-service=true
-  register: namespace_label
-  failed_when: namespace_label.stderr != '' and 'not labeled' not in namespace_label.stderr
-  changed_when: namespace_label.rc == 0
+    monitor: true
+    is_service: true
 
 - name: Download template from cluster
   shell: "oc get template {{ apicurito_template }} -n {{ apicurito_template_namespace }} -o {{ apicurito_template_file_format }} > {{ apicurito_template_file }}"
