--- a/roles/code-ready/tasks/main.yaml
+++ b/roles/code-ready/tasks/main.yaml
@@ -25,9 +25,12 @@
 
   - include_role:
       name: namespace
+      tasks_from: create
     vars:
-      namespace: "{{ che_namespace }}"
+      name: "{{ che_namespace }}"
       display_name: "{{ che_display_name }}"
+      monitor: true
+      is_service: true
 
   - set_fact:
       self_signed_cert: "{{che_ssl_cmd.stdout }}"
@@ -66,11 +69,5 @@
   - name: Include keycloak tasks
     include_tasks: keycloak-client.yml
     when: che_multiuser|bool == true
-
-  - name: Add labels to namespace
-    shell: oc label --overwrite namespace {{ che_namespace }} {{ monitoring_label_name }}={{ monitoring_label_value }} integreatly-middleware-service=true
-    register: namespace_label
-    failed_when: namespace_label.stderr != '' and 'not labeled' not in namespace_label.stderr
-    changed_when: namespace_label.rc == 0
 
   when: codeready_exists.rc != 0 and 'NotFound' in codeready_exists.stderr
