--- a/roles/customise-web-console/tasks/install.yml
+++ b/roles/customise-web-console/tasks/install.yml
@@ -13,11 +13,11 @@
     src: web-console-config.js.j2
     dest: "/tmp/{{ customise_web_console.javascript_filename }}"
 
-- name: "Create {{ customise_web_console.namespace }} namespace"
-  shell: "oc create namespace {{ customise_web_console.namespace }}"
-  register: web_console_config_namespace_result
-  changed_when: web_console_config_namespace_result == 0
-  failed_when: web_console_config_namespace_result.stderr != '' and 'AlreadyExists' not in web_console_config_namespace_result.stderr
+- include_role:
+    name: namespace
+    tasks_from: create
+  vars:
+    name: "{{ customise_web_console.namespace }}"
 
 # Hack to ensure the changes are idempotent and atomic
 # Ideally, oc apply would be used but the last-applied annotation it adds confuses other playbooks that rely on line/regex matching)
