--- a/roles/fuse_managed/tasks/main.yml
+++ b/roles/fuse_managed/tasks/main.yml
@@ -2,20 +2,17 @@
 
 - include_role:
     name: namespace
+    tasks_from: create
   vars:
-    namespace: "{{ fuse_namespace }}"
+    name: "{{ fuse_namespace }}"
     display_name: "Shared Fuse Online"
+    monitor: true
+    is_service: true
 
 - include_role:
     name: fuse_pull_secret
   vars:
     namespace: "{{ fuse_namespace }}"
-
-- name: Add labels to namespace
-  shell: oc label --overwrite namespace {{ fuse_namespace }} {{ monitoring_label_name }}={{ monitoring_label_value }} integreatly-middleware-service=true
-  register: namespace_label
-  failed_when: namespace_label.stderr != '' and 'not labeled' not in namespace_label.stderr
-  changed_when: namespace_label.rc == 0
 
 - name: Create Syndesis CRD
   shell: oc apply -f {{ fuse_online_crd_resources }}
