--- a/roles/middleware_monitoring/tasks/main.yml
+++ b/roles/middleware_monitoring/tasks/main.yml
@@ -2,15 +2,12 @@
 - name: Create monitoring namespace
   include_role:
     name: namespace
+    tasks_from: create
   vars:
-    namespace: "{{ monitoring_namespace }}"
+    name: "{{ monitoring_namespace }}"
     display_name: "{{ monitoring_display_name }}"
-
-- name: Add labels to namespace
-  shell: oc patch ns {{ monitoring_namespace }} --patch '{"metadata":{"labels":{"{{ monitoring_label_name }}":"{{ monitoring_label_value }}", "integreatly-middleware-service":"true"}}}'
-  register: namespace_patch
-  failed_when: namespace_patch.stderr != '' and 'not patched' not in namespace_patch.stderr
-  changed_when: namespace_patch.rc == 0
+    monitor: true
+    is_service: true
 
 - include: ./create_resource_from_template.yml
   with_items: "{{ monitoring_resource_templates_pre }}"
