--- a/roles/webapp/tasks/create-namespace.yml
+++ b/roles/webapp/tasks/create-namespace.yml
@@ -1,12 +1,9 @@
 ---
 - include_role:
     name: namespace
+    tasks_from: create
   vars:
-    namespace: "{{ webapp_namespace }}"
+    name: "{{ webapp_namespace }}"
     display_name: "Solution Explorer"
-
-- name: Add labels to namespace
-  shell: oc patch ns {{ webapp_namespace }} --patch '{"metadata":{"labels":{"{{ monitoring_label_name }}":"{{ monitoring_label_value }}", "integreatly-middleware-service":"true"}}}'
-  register: namespace_patch
-  failed_when: namespace_patch.stderr != '' and 'not patched' not in namespace_patch.stderr
-  changed_when: namespace_patch.rc == 0
+    monitor: true
+    is_service: true
