--- a/roles/webapp/tasks/uninstall.yml
+++ b/roles/webapp/tasks/uninstall.yml
@@ -5,8 +5,9 @@
   failed_when: output.stderr != '' and 'not found' not in output.stderr
   changed_when: output.rc == 0
 
-- name: Remove webapp namespace {{ webapp_namespace }}
-  shell: oc delete namespace {{ webapp_namespace }}
-  register: output
-  failed_when: output.stderr != '' and 'not found' not in output.stderr and 'The system is ensuring all content is removed from this namespace.' not in output.stderr
-  changed_when: output.rc == 0
+- include_role:
+    name: namespace
+    tasks_from: delete
+  vars:
+    names:
+    - "{{ webapp_namespace }}"
