--- a/roles/msbroker/tasks/main.yml
+++ b/roles/msbroker/tasks/main.yml
@@ -45,15 +45,12 @@
 # Create managed-service-broker namespace
 - include_role:
     name: namespace
+    tasks_from: create
   vars:
-    namespace: "{{ msbroker_namespace }}"
+    name: "{{ msbroker_namespace }}"
     display_name: "Managed Service Broker"
-
-- name: Add labels to namespace
-  shell: oc patch ns {{ msbroker_namespace }} --patch '{"metadata":{"labels":{"{{ monitoring_label_name }}":"{{ monitoring_label_value }}", "integreatly-middleware-service":"true"}}}'
-  register: namespace_patch
-  failed_when: namespace_patch.stderr != '' and 'not patched' not in namespace_patch.stderr
-  changed_when: namespace_patch.rc == 0
+    monitor: true
+    is_service: true
 
 - name: Create CRDs
   shell: "oc apply -f {{ item }}"
