--- a/roles/customise-web-console/tasks/uninstall.yml
+++ b/roles/customise-web-console/tasks/uninstall.yml
@@ -48,9 +48,11 @@
     - name: "update {{ customise_web_console.web_console.namespace }}/{{ customise_web_console.web_console.configmap }} configmap"
       shell: "oc create configmap {{ customise_web_console.web_console.configmap }} --from-file=/tmp/{{ customise_web_console.web_console.configmap_key }} -n {{ customise_web_console.web_console.namespace }}"
 
-- name: "Delete {{ customise_web_console.namespace }} namespace"
-  shell: "oc delete namespace {{ customise_web_console.namespace }}"
-  register: output
-  failed_when: output.stderr != '' and 'not found' not in output.stderr and 'The system is ensuring all content is removed from this namespace.' not in output.stderr
-  changed_when: output.rc == 0
+
+- include_role:
+    name: namespace
+    tasks_from: delete
+  vars:
+    names:
+    - "{{ customise_web_console.namespace }}"
   when: console_config_check_namespace_exists.rc == 0
