--- a/playbooks/install.yml
+++ b/playbooks/install.yml
@@ -44,6 +44,7 @@
 - import_playbook: "./install_fuse_managed.yml"
 - import_playbook: "./install_services.yml"
 - import_playbook: "./install_webapp.yml"
+- import_playbook: "./install_amq_streams.yml"
 - import_playbook: "./install_middleware_monitoring.yml"
 - import_playbook: "./install_user_rhsso.yml"
 - import_playbook: "./generate-customisation-inventory.yml"
