--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -106,6 +106,13 @@
       tags: ['che']
       when: che | default(true) | bool
     -
+      name: Uninstall AMQ Streams
+      include_role:
+        name: amq_streams
+        tasks_from: uninstall
+      tags: ['amq_streams']
+      when: amq_streams | default(true) | bool
+    -
       name: Reboot template broker
       include_role:
         name: reboot_template_broker
