Add Integreatly Operator

--- a/inventories/group_vars/all/manifest.yaml
+++ b/inventories/group_vars/all/manifest.yaml
@@ -2,6 +2,12 @@
 integreatly_version: master
 # threescale version is controlled by the operator. Changing the operator version will change the 3scale version
 
+#Integreatly Operator
+integreatly_operator: true
+integreatly_operator_ns_name: integreatly-operator
+integreatly_operator_version: master
+integreatly_operator_deploy: 'https://raw.githubusercontent.com/integr8ly/integreatly-operator/{{integreatly_operator_version}}/deploy'
+
 # controls whether threescale is installed or not.
 threescale: true
 # below threescale variables below are not currently used. They define where and what to pull in from github. These will be important as we look to break out and decouple the resources from the installer ###############
